# ifood-case

./: .dockerignore  .gitignore  Makefile  README.md  create-env-file.sh  docker-compose.yml  pyproject.toml  requirements.txt
docker/: Dockerfile  start_notebook.sh
notebooks/: 01-data-processing.ipynb  02-classification-model.ipynb  02-modeling.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
reports/: 01-data-processing.html  02-modeling.html
src/eda/: data_diagnostics.py  io.py  pipeline.py  transform.py
src/ifood_case.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ml/: metrics.py
src/spark/: session.py
