[project]
name = "ifood-case"
version = "0.1.0"
description = "Recomendação de ofertas com base em dados de clientes, transações e campanhas de marketing usando PySpark"
authors = [
  { name = "Nicksson Ckayo Arrais de Freitas", email = "nickssonarrais@email.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "pyspark>=3.5.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.4.0",
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0",
  "jupyterlab>=4.1.0",
  "xgboost>=1.7.6",
  "lightgbm>=4.1.0",
  "catboost>=1.2",
  "pyarrow>=15.0.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.jupyterlab]
# (opcional) futuras configs de extensão

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F"]

[tool.mypy]
strict = true
