[tool.poetry]
name = "ifood-case"
version = "0.1.0"
description = "Recomendação de ofertas com base em dados de clientes, transações e campanhas de marketing usando PySpark"
authors = ["Nicksson Ckayo Arrais de Freitas <nickssonarrais@email.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"
pyspark = ">=3.5.0"
pandas = ">=2.2.0"
scikit-learn = ">=1.4.0"
matplotlib = ">=3.8.0"
seaborn = ">=0.13.0"
xgboost = ">=1.7.6"
lightgbm = ">=4.1.0"
catboost = ">=1.2"
pyarrow = ">=15.0.0"
jupyter = "^1.1.1"
lab = "^8.4"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
black = ">=23.9.1"
isort = ">=5.12.0"
mypy = ">=1.5.1"
ruff = ">=0.0.289"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
